画面共通翻訳ファイルのタイポを修正

--- a/config/locales/views/common/en.yml
+++ b/config/locales/views/common/en.yml
@@ -1,6 +1,6 @@
 en:
   common:
     message:
-      created: %{model} was successfully created.
-      updated: %{model} was successfully updated.
-      destroyed: %{model} was successfully destroyed.
+      created: '%{model} was successfully created.'
+      updated: '%{model} was successfully updated.'
+      destroyed: '%{model} was successfully destroyed.'
