--- a/config/locales/views/book/ja.yml
+++ b/config/locales/views/book/ja.yml
@@ -7,7 +7,9 @@ ja:
     button:
       new: 登録する
       update: 更新する
-      destroy: 削除する
+      destroy: この書籍を削除する
     link:
       to_edit: 編集画面へ
       to_books: 書籍一覧へ
+      to_detail: 詳細を表示
+      to_new: 新規登録
