ログアウト用のリンクを追加

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -228,6 +228,7 @@ en:
       title_edit: "Editing %{name}"
       error: error
       validation_error: "%{errors} prohibited this %{name} from being saved"
+      log_out: Log out
   controllers:
     common:
       notice_create: "%{name} was successfully created."
