ユーザーの一覧画面、詳細画面を作成

--- a/config/locales/translation_en.yml
+++ b/config/locales/translation_en.yml
@@ -2,6 +2,8 @@ en:
   activerecord:
     models:
       book: Book
+      user: User
+
 
     attributes:
       book:
@@ -9,3 +11,5 @@ en:
         memo: Memo
         picture: Picture
         title: Title
+      user:
+        email: Email
