--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -2,6 +2,7 @@ ja:
   activerecord:
     models:
       book: 本
+      user: ユーザー
 
     attributes:
       book:
@@ -9,3 +10,5 @@ ja:
         memo: メモ
         picture: 画像
         title: タイトル
+      user:
+        email: アドレス
