--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -12,3 +12,6 @@ ja:
         title: タイトル
       user:
         email: アドレス
+        postal_code: 郵便番号
+        address: 住所
+        description: 自己紹介文
