--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -202,6 +202,9 @@ ja:
       previous: '‹ 前'
       next: '次 ›'
       truncate: '…'
+    mentions:
+      title: "この%{name}は以下の%{name}からリンクされています"
+      linked_from: からリンク
   controllers:
     common:
       notice_create: "%{name}が作成されました。"
